<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>uk.co.angrybee.joe</groupId>
  <artifactId>discord-whitelister</artifactId>
  <version>1.5.1</version>

  <name>discord-whitelister</name>
  <url>https://github.com/JoeShimell/DiscordWhitelisterSpigot</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>

    <repository>
        <id>papermc</id>
        <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>

    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>

    <repository>
      <id>dv8tion</id>
      <name>m2-dv8tion</name>
      <url>https://m2.dv8tion.net/releases</url>
    </repository>

    <!-- JitPack - for Github repos -->
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>

    <repository>
      <id>essentials-releases</id>
      <url>https://repo.essentialsx.net/releases/</url>
    </repository>

  </repositories>


  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.20.6-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>net.dv8tion</groupId>
      <artifactId>JDA</artifactId>
      <version>5.0.2</version>
      <exclusions>
        <exclusion>
          <groupId>club.minnced</groupId>
          <artifactId>opus-java</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

<!--    <dependency>-->
<!--      <groupId>com.googlecode.json-simple</groupId>-->
<!--      <artifactId>json-simple</artifactId>-->
<!--      <version>1.1.1</version>-->
<!--    </dependency>-->

<!--    <dependency>-->
<!--      <groupId>ch.qos.logback</groupId>-->
<!--      <artifactId>logback-classic</artifactId>-->
<!--      <version>1.4.14</version>-->
<!--    </dependency>-->

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>1.4.14</version>
    </dependency>

<!--    <dependency>-->
<!--      <groupId>org.slf4j</groupId>-->
<!--      <artifactId>slf4j-api</artifactId>-->
<!--      <version>2.0.10</version>-->
<!--    </dependency>-->

    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>2.4</version>
    </dependency>

    <dependency>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-shade-plugin</artifactId>
      <version>3.5.1</version>
      <type>maven-plugin</type>
    </dependency>

    <!-- SuperVanish -->
    <dependency>
      <groupId>com.github.LeonMangler</groupId>
      <artifactId>SuperVanish</artifactId>
      <!-- POM is invalid with java compiler ver > 8 (maven-compiler-plugin source & target version is set to 8) -->
      <version>6.2.19</version>
      <scope>provided</scope>
    </dependency>

    <!-- EssX-->
    <dependency>
      <groupId>net.essentialsx</groupId>
      <artifactId>EssentialsX</artifactId>
      <version>2.20.1</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>org.bstats</groupId>
          <artifactId>bstats-bukkit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <!-- VanishNoPacket -->
    <dependency>
      <groupId>com.github.mbax</groupId>
      <artifactId>VanishNoPacket</artifactId>
      <version>341a9a9710848d85813f7dfdab0b606d46ab264a</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.10.1</version>
    </dependency>

  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.3.2</version>
        </plugin>

        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>

        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.12.1</version>
        </plugin>

        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
        </plugin>

        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>

        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>

        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>


        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>4.0.0-M13</version>
        </plugin>

        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.5.1</version>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>shade</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <finalName>${project.artifactId}-${project.version}</finalName>
            <minimizeJar>true</minimizeJar>
            <relocations>
              <relocation>
                <pattern>com.fasterxml.jackson</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.com.fasterxml.jackson</shadedPattern>
              </relocation>

              <relocation>
                <pattern>net.dv8tion.jda</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.net.dv8tion.jda</shadedPattern>
              </relocation>

              <relocation>
                <pattern>gnu.trove</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.gnu.trove</shadedPattern>
              </relocation>

              <relocation>
                <pattern>javax.annotation</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.javax.annotation</shadedPattern>
              </relocation>

<!--              <relocation>-->
<!--                <pattern>org.slf4j</pattern>-->
<!--                <shadedPattern>uk.co.angrybee.joe.shaded.org.slf4j</shadedPattern>-->
<!--              </relocation>-->

              <relocation>
                <pattern>org.yaml.snakeyaml</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.org.yaml.snakeyaml</shadedPattern>
              </relocation>

              <relocation>
                <pattern>org.jetbrains.annotations</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.org.jetbrains.annotations</shadedPattern>
              </relocation>

              <relocation>
                <pattern>org.jdom2</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.org.jdom2</shadedPattern>
              </relocation>

              <relocation>
                <pattern>org.hamcrest</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.org.hamcrest</shadedPattern>
              </relocation>

              <relocation>
                <pattern>org.junit</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.org.junit</shadedPattern>
              </relocation>

              <relocation>
                <pattern>org.apache</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.org.apache</shadedPattern>
              </relocation>

              <relocation>
                <pattern>com.google.common</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.com.google.common</shadedPattern>
              </relocation>

              <relocation>
                <pattern>com.iwebpp.crypto</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.com.iwebpp.crypto</shadedPattern>
              </relocation>

              <relocation>
                <pattern>com.neovisionaries.ws.client</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.com.neovisionaries.ws.client</shadedPattern>
              </relocation>

              <relocation>
                <pattern>junit</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.junit</shadedPattern>
              </relocation>

              <relocation>
                <pattern>okhttp3</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.okhttp3</shadedPattern>
              </relocation>

              <relocation>
                <pattern>okio</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.okio</shadedPattern>
              </relocation>

              <relocation>
                <pattern>ch.qos.logback</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.ch.qos.logback</shadedPattern>
              </relocation>

              <relocation>
                <pattern>com.google.code.gson</pattern>
                <shadedPattern>uk.co.angrybee.joe.shaded.com.google.code.gson</shadedPattern>
              </relocation>
            </relocations>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>3.1.0</version>
          <executions>
            <execution>
              <phase>test</phase>
              <goals>
                <goal>run</goal>
              </goals>
              <configuration>
                <tasks>
                  <copy file="plugin.yml" tofile="${basedir}/plugin.yml"/>
                </tasks>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.1</version>
      </plugin>
    </plugins>

  </build>
</project>
